@@ -37,6 +37,10 @@
 
 	# Determine which view page to redirect back to.
 	$t_redirect_url = get_view_redirect_url( $f_id );
+
+	if (( ON == $g_quick_proceed )&&( $result )) {
+		print_header_redirect( $t_redirect_url );
+	}
 ?>
 <?php print_page_top1() ?>
 <?php
